--- a/item.tpl.html
+++ b/item.tpl.html
@@ -1,8 +1,8 @@
 <h3>{{item.name}}</h3>
 
 <div ng-show="user">
-  <a ng-href="#/edit/{{k}}">Edit</a>
-  <a ng-href="#/delete/{{k}}">Delete</a>
+  <a ng-href="#/edit/{{id}}">Edit</a>
+  <a ng-href="#/delete/{{id}}">Delete</a>
 </div>
 <a ng-href="#/list">Back</a>
 
