--- a/list.tpl.html
+++ b/list.tpl.html
@@ -1,5 +1,5 @@
 <a ng-show="user" ng-href="#/new">New</a>
-
+<input type="search" ng-model="search.query" placeholder="search"/>
 <table class="table">
   <tr>
     <th>Id</th>
@@ -7,7 +7,7 @@
     <th>Name</th>
     <th>Options</th>
   </tr>
-  <tr ng-repeat="item in items | orderByPriority">
+  <tr ng-repeat="item in items | orderByPriority | filter:search.query">
     <td><a ng-href="#/item/{{item.$id}}">{{item.$id}}</a></td>
     <td>{{item.$priority}}</td>
     <td>{{item.name}}</td>
