add bootstrap btn styles to links and buttons

--- a/edit.tpl.html
+++ b/edit.tpl.html
@@ -2,6 +2,6 @@
   <input type="text" ng-model="item.name"/>
 </label>
 
-<button ng-show="isNew" ng-click="save()">Save</button>
-<button ng-hide="isNew" ng-click="update()">Update</button>
-<a ng-href="#/list">Cancel</a>
+<button ng-show="isNew" ng-click="save()" class="btn btn-primary">Save</button>
+<button ng-hide="isNew" ng-click="update()" class="btn btn-primary">Update</button>
+<a ng-href="#/list" class="btn btn-link">Cancel</a>
