--- a/delete.tpl.html
+++ b/delete.tpl.html
@@ -1,4 +1,4 @@
 <p>Are you sure you want to delete <strong>{{item.name}}</strong>?</p>
 
-<button ng-click="remove()">Delete</button>
-<a ng-href="#/list">Cancel</a>
+<button ng-click="remove()" class="btn btn-danger">Delete</button>
+<a ng-href="#/list" class="btn btn-link">Cancel</a>
