--- a/item.tpl.html
+++ b/item.tpl.html
@@ -1,8 +1,8 @@
 <h3>{{item.name}}</h3>
 
 <div ng-show="user">
-  <a ng-href="#/edit/{{id}}">Edit</a>
-  <a ng-href="#/delete/{{id}}">Delete</a>
+  <a ng-href="#/edit/{{id}}" class="btn btn-link">Edit</a>
+  <a ng-href="#/delete/{{id}}" class="btn btn-link">Delete</a>
 </div>
-<a ng-href="#/list">Back</a>
+<a ng-href="#/list" class="btn btn-link">Back</a>
 
