--- a/list.tpl.html
+++ b/list.tpl.html
@@ -1,4 +1,4 @@
-<a ng-show="user" ng-href="#/new">New</a>
+<a ng-show="user" ng-href="#/new" class="btn btn-link">New</a>
 <input type="search" ng-model="search.query" placeholder="search"/>
 <table class="table">
   <tr>
@@ -13,8 +13,8 @@
     <td>{{item.name}}</td>
     <td>
       <div ng-show="user">
-        <a ng-href="#/edit/{{item.$id}}">Edit</a>
-        <a ng-href="#/delete/{{item.$id}}">Delete</a>
+        <a ng-href="#/edit/{{item.$id}}" class="btn btn-link">Edit</a>
+        <a ng-href="#/delete/{{item.$id}}" class="btn btn-link">Delete</a>
       </div>
     </td>
   </tr>
