--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src='https://login.persona.org/include.js'></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular-route.min.js"></script>
-  <script src="angularfire.js"></script>
+  <script src="angularfirepromise.js"></script>
   <!--<script src="http://cdn.firebase.com/libs/angularfire/0.5.0-rc1/angularfire.min.js"></script>-->
   <script src="script.js"></script>
   <title>AngularFire v2</title>
