--- a/list.tpl.html
+++ b/list.tpl.html
@@ -1,20 +1,27 @@
-<a ng-show="user" ng-href="#/new" class="btn btn-link">New</a>
+<!--<a ng-show="user" ng-href="#/new" class="btn btn-link">New</a>-->
+<a ng-href="#/new" class="btn btn-link">New</a>
 <input type="search" ng-model="search.query" placeholder="search"/>
 <table class="table">
   <tr>
     <th>Id</th>
     <th>Priority</th>
-    <th>Name</th>
+    <th>String</th>
+    <th>Number</th>
+    <th>Boolean</th>
     <th>Options</th>
   </tr>
-  <tr ng-repeat="item in items | orderByPriority | filter:search.query">
-    <td><a ng-href="#/item/{{item.$id}}">{{item.$id}}</a></td>
-    <td>{{item.$priority}}</td>
-    <td>{{item.name}}</td>
+  <!--<tr ng-repeat="item in items | orderByPriority | filter:search.query">-->
+  <tr ng-repeat="(key, value) in items">
+    <td><a ng-href="#/item/{{key}}">{{key}}</a></td>
+    <td>{{value.$priority}}</td>
+    <td>{{value.string}}</td>
+    <td>{{value.number}}</td>
+    <td>{{value.boolean}}</td>
     <td>
-      <div ng-show="user">
-        <a ng-href="#/edit/{{item.$id}}" class="btn btn-link">Edit</a>
-        <a ng-href="#/delete/{{item.$id}}" class="btn btn-link">Delete</a>
+      <!--<div ng-show="user">-->
+      <div>
+        <a ng-href="#/edit/{{key}}" class="btn btn-link">Edit</a>
+        <a ng-href="#/delete/{{key}}" class="btn btn-link">Delete</a>
       </div>
     </td>
   </tr>
